--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
         "api"
     ],    
     "require": {
-        "php": "^8.0"
+        "php": "7.4"
     },
     "license": "MIT",
     "authors": [
